--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Anupkumar N
-logo: /assets/img/logo.png
+logo: /assets/img/Anup.png
 description: Data Science Portfolio
 show_downloads: true
 google_analytics:
